--- a/PAGES/5c_initializing/index.html
+++ b/PAGES/5c_initializing/index.html
@@ -2596,7 +2596,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>We continue introducing preliminary concepts for mutations. The previous section distinguished between <code>&#61;</code> for assignments and mutations. Now, we&#39;ll deal with approaches to creating vectors.</p>
-<p>Our presentation starts by outlining the process of initializing vectors, where memory is reserved without assigning initial values. We&#39;ll then discuss how to create vectors with predefined values, such as zeros or ones. We conclude showing how to concatenate multiple vectors into a new one.</p>
+<p>Our presentation starts by outlining the process of initializing vectors, where memory is reserved without assigning initial values. We&#39;ll then discuss how to create vectors with predefined values, such as zeros or ones. We conclude by showing how to concatenate multiple vectors into a new one.</p>
 <p>      </div>
     </div>
   </div>
@@ -2606,8 +2606,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Initializing Vectors</h2></p>
-<p>Creating an array involves two steps: allocating memory space and assigning initial values to its elements. If you intend to eventually populate the array with specific values, it&#39;s nonetheless more efficient to only initialize the array. This involves reserving memory space, but without setting any initial values.</p>
-<p>The approach relies on the so-called <code>undef</code> values, which represent arbitrary content held in memory at the moment of reserving space. Importantly, while <code>undef</code> provides concrete numbers, these values are meaningless and vary every time you initialize an array.</p>
+<p>Creating an array involves two steps: allocating memory space and assigning initial values to its elements. If, nonetheless, you intend to eventually populate the array with specific values, it&#39;s more efficient to only initialize the array. This involves reserving memory space, but without setting any initial values.</p>
+<p>The approach relies on the so-called <code>undef</code> values, which represent arbitrary content held in memory at the moment of reserving space. This means that, while <code>undef</code> provides concrete numbers, these values are meaningless and vary every time you initialize an array.</p>
 <p>There are two methods for initializing arrays with <code>undef</code> values. The first one requires specifying the type and length of the array, using the syntax <code>Vector&#123;&lt;elements&#39; type&gt;&#125;&#40;undef, &lt;length&gt;&#41;</code>. The second approach is based on the function <code>similar&#40;x&#41;</code>, which creates a vector with the same type and dimensions as <code>x</code>.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
