--- a/PAGES/1a_installation/index.html
+++ b/PAGES/1a_installation/index.html
@@ -2590,7 +2590,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2601,7 +2601,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="installing_julia" class="scrollspy">
+<section id="installing_julia" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2613,7 +2613,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="installing_an_editor" class="scrollspy section-bg-color">
+<section id="installing_an_editor" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2627,7 +2627,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="installing_r_and_python_optional" class="scrollspy">
+<section id="installing_r_and_python_optional" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2638,7 +2638,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="julias_resources_for_help" class="scrollspy section-bg-color">
+<section id="julias_resources_for_help" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
