--- a/PAGES/2d_arrays/index.html
+++ b/PAGES/2d_arrays/index.html
@@ -2590,7 +2590,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2616,7 +2616,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="vectors" class="scrollspy">
+<section id="vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2668,7 +2668,7 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</
     </div>
   </div>
 </section>
-<section id="matrices_optional" class="scrollspy section-bg-color">
+<section id="matrices_optional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
