--- a/PAGES/5f_mutating_views/index.html
+++ b/PAGES/5f_mutating_views/index.html
@@ -2590,7 +2590,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2607,7 +2607,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="mutation_through_vectors" class="scrollspy section-bg-color">
+<section id="mutation_through_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2716,7 +2716,7 @@ x&#91;:&#93; &#61; x .* 10</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="mutation_through_broadcasting_over" class="scrollspy">
+<section id="mutation_through_broadcasting_over" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2818,7 +2818,7 @@ y  &#61; x&#91;x .≥ 3&#93; .* 10    # this creates a new variable &#39;y&#39;<
     </div>
   </div>
 </section>
-<section id="mutation_through_for-loops" class="scrollspy section-bg-color">
+<section id="mutation_through_for-loops" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
