--- a/PAGES/8_overview/index.html
+++ b/PAGES/8_overview/index.html
@@ -2553,7 +2553,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="13633231208144796923" class="scrollspy">
+<section id="13633231208144796923" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
