--- a/PAGES/8a_TS-definition/index.html
+++ b/PAGES/8a_TS-definition/index.html
@@ -2553,7 +2553,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2563,7 +2563,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="an_intuition" class="scrollspy">
+<section id="an_intuition" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2581,7 +2581,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="an_example" class="scrollspy section-bg-color">
+<section id="an_example" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2616,7 +2616,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="checking_for_type_stability" class="scrollspy">
+<section id="checking_for_type_stability" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2687,7 +2687,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="yellow_warnings_may_turn_red" class="scrollspy section-bg-color">
+<section id="yellow_warnings_may_turn_red" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
