--- a/PAGES/8b_TS-scalarsVectors/index.html
+++ b/PAGES/8b_TS-scalarsVectors/index.html
@@ -2553,7 +2553,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2563,7 +2563,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="scalars_and_vectors" class="scrollspy">
+<section id="scalars_and_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2620,7 +2620,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="type_stability_with_scalars" class="scrollspy section-bg-color">
+<section id="type_stability_with_scalars" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2697,7 +2697,7 @@ foo&#40;1, 2.5&#41;         # type UNSTABLE -&gt; &#96;a * i&#96; is either &#96
     </div>
   </div>
 </section>
-<section id="type_stability_with_vectors" class="scrollspy">
+<section id="type_stability_with_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
