--- a/PAGES/8f_TS-highOrderFunctions/index.html
+++ b/PAGES/8f_TS-highOrderFunctions/index.html
@@ -2553,7 +2553,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2565,7 +2565,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="functions_as_arguments_the_issue" class="scrollspy">
+<section id="functions_as_arguments_the_issue" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2580,7 +2580,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="no_specialization_and_its_solutions" class="scrollspy section-bg-color">
+<section id="no_specialization_and_its_solutions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
