--- a/PAGES/9g_lazyBroadcasting/index.html
+++ b/PAGES/9g_lazyBroadcasting/index.html
@@ -2553,7 +2553,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2565,7 +2565,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="what_broadcasting_does" class="scrollspy section-bg-color">
+<section id="what_broadcasting_does" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2704,7 +2704,7 @@ end</code></pre> </div> </div>
     </div>
   </div>
 </section>
-<section id="broadcasting_loop_fusion" class="scrollspy">
+<section id="broadcasting_loop_fusion" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2821,7 +2821,7 @@ foo&#40;a&#41;  &#61; aux1&#40;a&#41; &#43; aux2&#40;a&#41;</code></pre> </div><
     </div>
   </div>
 </section>
-<section id="lazy_broadcasting" class="scrollspy section-bg-color">
+<section id="lazy_broadcasting" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
