--- a/PAGES/5e_indexing/index.html
+++ b/PAGES/5e_indexing/index.html
@@ -2595,7 +2595,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Mutating vectors requires first identifying the specific elements to be modified. This process is known as <strong>vector indexing</strong>, and we&#39;ve already covered basic indexing methods based on vectors and ranges &#40;e.g., <code>x&#91;&#91;1,2,3&#93;&#93;</code> or <code>x&#91;1:3&#93;</code>&#41;. While these approaches are effective for simple selections, they fall short for more complex scenarios, such as selecting elements based on conditions. </p>
+<p>Previous to mutating vectors, you need first to identify the specific elements to be modified. This process is known as <strong>vector indexing</strong>, and we&#39;ve already covered basic indexing methods. Specifically, the methods presented were based on vectors and ranges &#40;e.g., <code>x&#91;&#91;1,2,3&#93;&#93;</code> or <code>x&#91;1:3&#93;</code>&#41;. While these approaches are effective for simple selections, they fall short for more complex scenarios, such as selecting elements based on conditions. </p>
 <p>This section expands our toolkit by introducing more advanced forms of indexing. The techniques primarily build on broadcasting and Boolean operations.</p>
 <p>      </div>
     </div>
@@ -2883,7 +2883,7 @@ y &#61; filter&#40;a -&gt; a &gt; 7, x&#41;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 13, 2024 
+          © Martin Alfaro <br>Last Modified September 15, 2024 
       </span> 
   </div> 
 </footer>
