--- a/PAGES/5g_inplace/index.html
+++ b/PAGES/5g_inplace/index.html
@@ -2596,7 +2596,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>This section continues exploring <strong>approaches to mutating vectors</strong>. The emphasis is in particular on <strong>in-place functions</strong>, defined as functions that mutate at least one of their arguments. </p>
-<p>Importantly, many built-in functions come with in-place versions. This makes it possible to store outputs in a vector passed as argument, rather than in a new object. Another common application of in-place functions is for mutating vectors via a for-loop. </p>
+<p>Remarkably, many built-in functions come with in-place versions. This makes it possible to store outputs in a vector passed as argument, rather than in a new object. Another common application of in-place functions is for mutating vectors via a for-loop. </p>
 <p>The significance of in-place functions will become apparent when discussing high performance. Essentially, by reusing the same object, in-place functions eliminate the overhead of creating new objects, thereby resulting in efficiency gains.</p>
 <p>      </div>
     </div>
@@ -2607,7 +2607,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>In-Place Functions</h2></p>
-<p><span style="color: rgb(62, 121, 180);"><strong>In-place functions</strong></span> are also known as <span style="color: rgb(62, 121, 180);"><strong>mutating functions</strong></span>, and are characterized by modifying at least one of its arguments. For instance, given a vector <code>x</code>, the function <code>foo&#40;x&#41;</code> is in-place if its modifies the values of <code>x</code>&#39;s elements. </p>
+<p><span style="color: rgb(62, 121, 180);"><strong>In-place functions</strong></span>, also known as <span style="color: rgb(62, 121, 180);"><strong>mutating functions</strong></span>, are characterized by modifying at least one of its arguments. For instance, given a vector <code>x</code>, the function <code>foo&#40;x&#41;</code> is in-place when it modifies the values of <code>x</code>&#39;s elements.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">y &#61; &#91;0,0&#93;
 
@@ -2817,7 +2817,7 @@ map&#33;&#40;a -&gt; a^2, output, x&#41;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 13, 2024 
+          © Martin Alfaro <br>Last Modified September 15, 2024 
       </span> 
   </div> 
 </footer>
