--- a/PAGES/5d_slices/index.html
+++ b/PAGES/5d_slices/index.html
@@ -2595,15 +2595,15 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section concludes the coverage of preliminary concepts for understanding mutations. In particular, it focuses on the behavior of a vector&#39;s slice. </p>
-<p>A <span style="color: rgb(62, 121, 180);"><strong>slice</strong></span> is defined as a subset of a vector&#39;s elements, and is represented as <code>x&#91;&lt;indices&gt;&#93;</code>. Importantly, <strong>slices act differently depending on where they're included in a statement</strong>. Formally, slices can act as:</p>
+<p>This section concludes the coverage of preliminary concepts for mutations, focusing on the behavior of a vector&#39;s slice. A <span style="color: rgb(62, 121, 180);"><strong>slice</strong></span> is defined as a subset of a vector&#39;s elements, and is formally represented as <code>x&#91;&lt;indices&gt;&#93;</code>. </p>
+<p>Importantly, <strong>slices act differently depending on how they're included in a statement</strong>. Specifically, slices can act as either:</p>
 <ul>
-<li><p><span style="color: rgb(62, 121, 180);"><strong>copies</strong></span> of the original vector: this creates a new object, allocated at a new memory address. </p>
+<li><p><span style="color: rgb(62, 121, 180);"><strong>copies</strong></span> of the original vector, thus creating a new object at a new memory address. </p>
 </li>
-<li><p><span style="color: rgb(62, 121, 180);"><strong>views</strong></span> of the original vector: this references the original object, so that both the original object and the slice point to the same memory address.</p>
+<li><p><span style="color: rgb(62, 121, 180);"><strong>views</strong></span> of the original vector, where the original object and the slice share the same memory address.</p>
 </li>
 </ul>
-<p>The distinction is essential when it comes to mutating an object through a slice: as the slice must reference the original object, mutations can only be implemented through views. If instead a slice acts as a copy, the parent object and the slice will be entirely independent.</p>
+<p>In the following, we explain in detail this distinction. Understanding it is crucial for mutating slices, as mutations can only occur when the slice references the original object. Formally, we say that the slice must act as a view, so that any modifications made to the slice will affect the parent object. In contrast, if a slice acts as a copy, the parent object and the slice are unrelated, and changes to the slice have no impact on the original object.</p>
 <p>      </div>
     </div>
   </div>
@@ -2613,9 +2613,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Slices and the = Operator</h2></p>
-<p>Vector mutation through slices is achieved by assigning new values through the operator <code>&#61;</code>. However, we need to be particularly careful when using slices in assignments, as their behavior varies depending on their placement within the expression.</p>
+<p>Vector mutation requires modifying slices through the operator <code>&#61;</code>. For this to be possible, the slice needs to reference the original object. Nonetheless, the behavior of slices in assignments varies, depending on their placement within the expression.</p>
 <p>Specifically, <strong>slices on the left-hand (LHS) side of</strong> <code>&#61;</code> <strong>act as views</strong>. This means that these slices reference the original elements, thus allowing for the mutation of its parent object. In contrast, <strong>slices on the right-hand side (RHS) of</strong> <code>&#61;</code> <strong>create a copy</strong>, and therefore point to a new object. Consequently, any modification made to the slice won&#39;t affect the original object. </p>
-<p>The following code snippet demonstrates this differing behavior.</p>
+<p>The following code snippet demonstrates each behavior.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2679,7 +2679,7 @@ x&#91;1&#93; &#61; 0        # it does NOT modify &#39;y&#39;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>The Function "view"</h2></p>
-<p>Identifying when slices act as copies or views will take significance when exploring high performance, as views avoid the overhead of memory allocations. Beyond assignments, <strong>slices typically default to creating copies</strong>. This occurs, for instance, when a slice is passed as a function argument or when used within an expression. The following examples states scenarios where slices act as copies. </p>
+<p>Identifying when slices act as copies or views will take significance when exploring high performance, as views avoid the overhead of memory allocations. Considering this, it&#39;s important to distinguish between copies and slices beyond assignments. Broadly speaking, <strong>slices typically default to creating copies</strong>. This is the case when, for instance, a slice is passed as a function argument or when used within an expression. These scenarios are illustrated below.</p>
  <div class=" code_box"> <details  open><summary> Slices as Copies  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;3,4,5&#93;
 
@@ -2692,7 +2692,7 @@ x&#91;1:2&#93; .&#43; 2
 
 &#40;sum&#40;x&#91;1:2&#93;&#41; &gt; 0&#41; &amp;&amp; true</code></pre>
 <p></div> </div>  </details></div>
-<p>In all these cases, transforming slices into views requires an explicit indication. This can be achieved via the function <code>view</code>, whose syntax is <code>view&#40;x, &lt;indices&gt;&#41;</code>, where <code>&lt;indices&gt;</code> represent the subset of indices defining the slice. To demonstrate its usage, we revisit and compare the previous code snippet.</p>
+<p>In all these cases, transforming slices into views requires explicit indicating it. This can be achieved via the function <code>view</code>, whose syntax is <code>view&#40;x, &lt;indices&gt;&#41;</code>, where <code>&lt;indices&gt;</code> represent the subset of indices defining the slice. To demonstrate its usage, we revisit and compare the previous code snippet.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2738,7 +2738,7 @@ y &#61; @view&#40;x&#91;1:2&#93;&#41; .&#43; @view&#40;x&#91;2:3&#93;&#41;
 
 @views y &#61; x&#91;1:2&#93; .&#43; x&#91;2:3&#93;</code></pre>
 <p></div> </div>  </details></div>
-<p>One of the most notable applications of <code>@views</code> is in function definitions. By placing <code>@views</code> at the beginning of a function, you can automatically convert every slice within that function into a view.</p>
+<p>One of the most notable applications of <code>@views</code> is in function definitions. By placing <code>@views</code> at the beginning, you can automatically convert every slice within the function body into a view.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2786,7 +2786,7 @@ end</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 13, 2024 
+          © Martin Alfaro <br>Last Modified September 15, 2024 
       </span> 
   </div> 
 </footer>
