--- a/PAGES/5f_mutating_views/index.html
+++ b/PAGES/5f_mutating_views/index.html
@@ -2612,7 +2612,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Mutation Via Vectors</h2></p>
-<p>The most straightforward way to mutate a vector is by replacing a slice with a vector. This can be achieved with statements of the form <code>x&#91;&lt;indices&gt;&#93; &#61; &lt;expression&gt;</code>, where <code>&lt;expression&gt;</code> must match the length of <code>x&#91;&lt;indices&gt;&#93;</code>. The method is based on that a slice on the left-hand side of <code>&#61;</code> behaves as a view, thus referencing to the original object rather than to a new one.  </p>
+<p>The most straightforward way to mutate a vector is by replacing a slice with another vector. This can be achieved with statements of the form <code>x&#91;&lt;indices&gt;&#93; &#61; &lt;expression&gt;</code>, where <code>&lt;expression&gt;</code> must match the length of <code>x&#91;&lt;indices&gt;&#93;</code>. The method is based on that a slice on the left-hand side of <code>&#61;</code> behaves as a view, thus referencing to the original object rather than to a new one.  </p>
 <p>The following examples show that any indexing method can be applied to define <code>x&#91;&lt;indices&gt;&#93;</code>. It also shows that scalars can be used instead of vectors when the slice comprises a single element, </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
