--- a/PAGES/5g_inplace/index.html
+++ b/PAGES/5g_inplace/index.html
@@ -2595,9 +2595,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section continues exploring <strong>approaches to mutating vectors</strong>. The emphasis is in particular on <strong>in-place functions</strong>, defined as functions that mutate at least one of their arguments. </p>
-<p>Remarkably, many built-in functions come with in-place versions. This makes it possible to store outputs in a vector passed as argument, rather than in a new object. Another common application of in-place functions is for mutating vectors via a for-loop. </p>
-<p>The significance of in-place functions will become apparent when discussing high performance. Essentially, by reusing the same object, in-place functions eliminate the overhead of creating new objects, thereby resulting in efficiency gains.</p>
+<p>This section continues exploring <strong>approaches to mutating vectors</strong>. The emphasis is in particular on <strong>in-place functions</strong>, defined as functions that mutate at least one of their arguments. This allows users to store a function&#39;s output directly in one of its arguments, rather doing so by creating a new object. </p>
+<p>A common application of in-place functions is the execution of a for-loop to update the values of a vector. Furthermore, many built-in functions in Julia come with a corresponding in-place version. They can be easily identified by the <code>&#33;</code> appended to end of their names. </p>
+<p>The benefits of in-place functions will become evident in Part II, when discussing high-performance computing. By reusing existing objects, in-place functions eliminate the overhead associated with creating new objects, resulting in significant efficiency gains. </p>
 <p>      </div>
     </div>
   </div>
@@ -2607,7 +2607,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>In-Place Functions</h2></p>
-<p><span style="color: rgb(62, 121, 180);"><strong>In-place functions</strong></span>, also known as <span style="color: rgb(62, 121, 180);"><strong>mutating functions</strong></span>, are characterized by modifying at least one of its arguments. For instance, given a vector <code>x</code>, the function <code>foo&#40;x&#41;</code> is in-place when it modifies the values of <code>x</code>&#39;s elements.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>In-place functions</strong></span>, also known as <span style="color: rgb(62, 121, 180);"><strong>mutating functions</strong></span>, are distinguished by their effect on the arguments they operate on. Specifically, their execution updates the value of at least one of its arguments.</p>
+<p>Given a vector <code>x</code>, the following function <code>foo&#40;x&#41;</code> is an example of in-place function, as it modifies the values of <code>x</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">y &#61; &#91;0,0&#93;
 
@@ -2623,8 +2624,8 @@ end</code></pre>
  0</div> </div></div> </div>   </details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     While functions are capable of mutating values, they <strong>can't reassign variables</strong>. This is because any attempt to redefine a function&#39;s variable will be interpreted as the definition of a new local variable.  <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Strictly speaking, it&#39;s possible to reassign a variable by using the <code>global</code> keyword. However, its use is discouraged, explaining why we won&#39;t cover it.  </span></span> </p>
-<p>The following code illustrates this feature by redefining a function argument and a global variable. The result reflects that, when <code>x</code> is redefined, <code>foo</code> interprets <code>x</code> as a new local variable. This determines that <code>x</code> only exists within <code>foo</code>&#39;s scope.</p>
+      <b> Remark</b> </span>  </div>  <div class=content>     Functions are capable of mutating values, but they <strong>can't reassign variables</strong>. Any attempt to redefine a variable within a function is interpreted as the definition of a new local variable.  <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Strictly speaking, it&#39;s possible to reassign a variable by using the <code>global</code> keyword. However, its use is discouraged, explaining why we won&#39;t cover it.  </span></span> </p>
+<p>The following code illustrates this behavior by redefining a function argument and a global variable. The result reflects that, when <code>x</code> is redefined, <code>foo</code> treats <code>x</code> as a new local variable, thus only existing within <code>foo</code>&#39;s scope.</p>
 <p> <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2658,13 +2659,13 @@ end</code></pre>
  2</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>  </div>  </div>
-<p>When it comes to for-loops, the ability to mutate function arguments is crucial. Recall that for-loops should always be enclosed within functions. This practice is recommended to prevent issues with variable scope and primarily for performance reasons, as we&#39;ll discuss later on the website.</p>
-<p>The code snippet below demonstrates this application. In particular, we consider its use for initializing and population a vector.</p>
+<p>The ability to mutate function arguments is crucial for the use of for-loops. Recall that for-loops should always be wrapped in functions. This not only prevents issues with variable scope, but also enhances performance, as we&#39;ll discuss in Part II. </p>
+<p>The code snippet below provides an application of in-place functions to for-loops. In particular, its consider the population of a vector.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
     <button class="tablink first_tab active" data-id=""> For-Loop Mutation </button>
-    <button class="tablink" data-id=""> Filling Vector With For-Loop </button>    
+    <button class="tablink" data-id=""> Populating Vector With For-Loop </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;3,4,5&#93;
@@ -2695,20 +2696,6 @@ end</code></pre>
  0
  0
  0</div> </div></div> </div> 
- </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">x &#61; &#91;5,6,7&#93;
-
-function foo&#40;&#41;
-    for i in eachindex&#40;x&#41;
-        x&#91;i&#93; &#61; 0
-    end
-end</code></pre>
-<p></div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"><div class="julia_line">julia&gt</div> <code>foo&#40;&#41;</code></div><br/> <div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x</code><br/><div class="akin_to_pre">3-element Vector{Int64}:
- 0
- 0
- 0</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>      </div>
@@ -2720,11 +2707,11 @@ end</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Built-In In-Place Functions</h2></p>
-<p>Many built-in functions taking vectors as arguments are available in two forms: a &quot;standard&quot; version and an in-place version. To distinguish between them, Julia&#39;s developers follow a convention that <strong>any function ending with</strong> <code>&#33;</code> <strong>corresponds to an in-place function</strong>.</p>
+<p>In Julia, many built-in functions that take vectors as arguments are available in two forms: a &quot;standard&quot; version and an in-place version. To distinguish between them, Julia&#39;s developers follow a convention that <strong>any function ending with</strong> <code>&#33;</code> <strong>corresponds to an in-place function</strong>.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content> <strong>Ending a function with</strong> <code>&#33;</code> <strong>does not affect the function's behavior in any way</strong>. It&#39;s simply a convention adopted by Julia&#39;s developers to emphasize the mutable nature of the operation. The goal is to prevent users from unintentionally modifying objects.  </div>  </div>
-<p>For example, let&#39;s consider the function <code>sort</code>. This orders the elements of a vector in increasing order, or alternatively in decreasing order through the option <code>rev&#61;true</code>. Specifically, the standard version <code>sort&#40;x&#41;</code> creates a new vector containing the sorted elements, leaving the original vector <code>x</code> unaffected. In contrast, the in-place version <code>sort&#33;&#40;x&#41;</code> directly modifies the original vector <code>x</code> to store the result.</p>
+      <b> Remark</b> </span>  </div>  <div class=content> <strong>Appending</strong> <code>&#33;</code> <strong>to a function has no impact on the function's behavior at all</strong>. It&#39;s simply a convention adopted by Julia&#39;s developers to emphasize the mutable nature of the operation. Its purpose is to alert users about the potential side effects of the function, thus preventing unintended modifications of objects.  </div>  </div>
+<p>To illustrate these two possible forms, let&#39;consider the built-in function <code>sort</code>. This arranges the elements of a vector in ascending order, with the option <code>rev&#61;true</code> alternatively implementing a descending order. As for the standard version, <code>sort&#40;x&#41;</code> creates a new vector containing the sorted elements, leaving the original vector <code>x</code> unchanged. In contrast, the in-place version <code>sort&#33;&#40;x&#41;</code> updates the original vector <code>x</code> directly, overwriting its values with the sorted result.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2756,8 +2743,7 @@ sort&#33;&#40;x&#41;</code></pre>
  3</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The example illustrates a scenario where the function argument serves as both input and output. A related usage is when we include an argument solely to storing the output. This technique enables the reuse of the same vector to store results. This can improve performance when performing multiple iterations, by reusing the output vector and therefore avoiding the creating of a new object in each iteration.</p>
-<p>For instance, given a function <code>foo</code> and a vector <code>x</code>, the function <code>map&#40;foo, x&#41;</code> has an in-place version <code>map&#33;&#40;foo, &lt;output vector&gt;, x&#41;</code>.</p>
+<p>The example illustrates a scenario where the function argument serves as both input and output. Another possibility is to include an argument whose sole purpose is to store outputs. For instance, given a function <code>foo</code> and a vector <code>x</code>, the built-in function <code>map&#40;foo, x&#41;</code> has an in-place version <code>map&#33;&#40;foo, &lt;output vector&gt;, x&#41;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
