--- a/PAGES/5g_inplace/index.html
+++ b/PAGES/5g_inplace/index.html
@@ -2769,7 +2769,7 @@ output &#61; map&#40;a -&gt; a^2, x&#41;</code></pre>
 <pre><code class="language-julia">x      &#61; &#91;1, 2, 3&#93;
 output &#61; similar&#40;x&#41;             # we initialize &#96;output&#96;
 
-map&#33;&#40;a -&gt; a^2, output, x&#41;</code></pre>
+map&#33;&#40;a -&gt; a^2, output, x&#41;       # we update &#96;output&#96;</code></pre>
 <p></div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x</code><br/><div class="akin_to_pre">3-element Vector{Int64}:
  1
@@ -2803,7 +2803,7 @@ map&#33;&#40;a -&gt; a^2, output, x&#41;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 17, 2024 
+          © Martin Alfaro <br>Last Modified September 18, 2024 
       </span> 
   </div> 
 </footer>
