--- a/PAGES/6_overview/index.html
+++ b/PAGES/6_overview/index.html
@@ -2596,10 +2596,10 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2></h2></p>
 <p>The previous chapter equipped us with techniques for indexing and modifying vectors, expanding our toolkit for working with data collections. This section builds on this knowledge to achieve several goals.</p>
-<p>Firstly, we&#39;ll <strong>introduce essential collection types beyond vectors</strong>, including dictionaries and named tuples. By leveraging our solid grasp of vectors, we&#39;re now well-positioned to appreciate the unique features of these alternative collections and understand when they&#39;re more suitable. </p>
-<p>Secondly, we&#39;ll <strong>expand on tools for streamlining code</strong>, which will become indispensable in your daily use of Julia. These tools will make your coding experience smoother, by reducing boilerplate code and improving syntax readability. One notable example is the use of pipes. </p>
-<p>Thirdly, we&#39;ll introduce a range of standard functions for vectors, enabling you to perform common operations such as removing duplicates and sorting elements.</p>
-<p>To conclude the chapter, we&#39;ll <strong>put into practice all the tools we've covered</strong>, through a hypothetical scenario involving a YouTuber&#39;s earnings. This hands-on approach will demonstrate how to apply the tools, helping you bridge the gap between theory and practice. Furthermore, it&#39;ll lay the foundation for more advanced data analysis tools: by mastering the application of fundamentals such as vector indexing, you&#39;ll be well-equipped to seamlessly transition to typical data-analysis tools, such as the <code>DataFrames</code> package.</p>
+<p>Firstly, we&#39;ll <strong>introduce additional types for collections</strong>, including dictionaries and named tuples. Building on our now grasp of tuples and vectors, we&#39;re now well-positioned to appreciate the unique features of these alternatives and understand when they&#39;re more suitable.</p>
+<p>Secondly, we&#39;ll <strong>expand on tools for streamlining code</strong>, which will become indispensable in your daily use of Julia. These tools will make your coding experience smoother, by reducing <a href="https://en.wikipedia.org/wiki/Boilerplate_code">boilerplate code</a> and improving syntax readability. One notable example is the use of pipes. </p>
+<p>Thirdly, we&#39;ll introduce several standard functions for manipulating vectors, enabling you to perform operations such as removing duplicates and sorting elements.</p>
+<p>To conclude the chapter, we&#39;ll <strong>put into practice all the tools we've covered</strong>. This will be done through a hypothetical scenario involving a YouTuber&#39;s earnings. This hands-on approach will demonstrate how to apply the tools learned, helping you bridge the gap between theory and practice. Furthermore, it&#39;ll lay the foundation for more advanced data analysis tools: by mastering the application of fundamentals such as vector indexing, you&#39;ll be well-equipped to seamlessly transition to typical data-analysis tools &#40;e.g., the <code>DataFrames</code> package&#41;. </p>
  <div style="visibility: hidden;margin-bottom:-4em">
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
@@ -2630,7 +2630,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 17, 2024 
+          © Martin Alfaro <br>Last Modified September 18, 2024 
       </span> 
   </div> 
 </footer>
