--- a/PAGES/5c_initializing/index.html
+++ b/PAGES/5c_initializing/index.html
@@ -2852,7 +2852,7 @@ x                &#61; repeat&#40;vector_to_repeat, nr_repetitions&#41;</code></
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Adding, Removing, and Replacing Elements (<strong><i>OPTIONAL</i></strong>)</h2></p>
+        <h2>Adding, Removing, and Replacing Elements  <strong>(<i style="color:red">OPTIONAL</i>)</strong></h2></p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> </span>  </div>  <div class=content>     This subsection applies a couple of <strong>concepts we haven't fully discussed yet</strong>. Considering this, the subsection is labelled as optional.</p>
@@ -3618,7 +3618,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#adding_removing_and_replacing_elements_optional" data-offset="-40">Adding, Removing, and Replacing Elements (<strong><i>OPTIONAL</i></strong>)</a>
+          <a href="#adding_removing_and_replacing_elements_optional" data-offset="-40">Adding, Removing, and Replacing Elements ~~~\optional~~~</a>
         </li>
         
       </ul>
