--- a/PAGES/6a_tuples_and_namedtuples/index.html
+++ b/PAGES/6a_tuples_and_namedtuples/index.html
@@ -3223,13 +3223,13 @@ x, y, z &#61; foo&#40;&#41;</code></pre> </div></div>
  </div></div>
 <p>  </p></details></div>
 <p>In some cases, as when we want to retrieve descriptive statistics, we could be interested in a subset of the outputs. In that case, you can destructure either a tuple or a named tuple. Note that the case of named tuple necessarily requires that the function&#39;s output is specified through a named tuple. However, this isn&#39;t necessarily within our control, as occurs when the output is from a function&#39;s package. Considering this, a tuple is more flexible, as it could be employed for outputs coming from various types of collections.</p>
-<p>The following examples extract the first and third output, destructuring both tuples and named tuples.  </p>
+<p>By destructuring both tuples and named tuples, the following examples extract the first and third output.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
     <button class="tablink first_tab active" data-id=""> Tuple as Output </button>
     <button class="tablink" data-id=""> Vector as Output </button>
-    <button class="tablink" data-id=""> Named Tuple </button>
+    <button class="tablink" data-id=""> Named Tuples </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">function foo&#40;&#41;
     out1 &#61; 2
