--- a/PAGES/8a_TS-definition/index.html
+++ b/PAGES/8a_TS-definition/index.html
@@ -2558,7 +2558,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section we&#39;ll formally define type stability, additionally reviewing tools for verifying the property. The next section we&#39;ll start the coverage of type stability applied to specific objects. </p>
+<p>This section will formally define type stability, additionally reviewing tools for verifying the property. In the next section, we&#39;ll start the coverage of type stability applied to specific objects. </p>
 <p>      </div>
     </div>
   </div>
